Fix top-bar z-index

--- a/app/components/no-messages-modal/style.scss
+++ b/app/components/no-messages-modal/style.scss
@@ -1,6 +1,5 @@
 .modal.no-messages-modal {
-    background: url('/images/poly.png');
-
+    background: white;
     text-align: center;
 
     .title {
